[package]
name = "redis-clone"
version = "0.1.0"
authors = ["Dan Munckton <munckfish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
tokio = { version = "0.2.6", features = ["full"] }
futures = "0.3.1"
