[package]
name = "redis-clone"
version = "0.1.0"
authors = ["Dan Munckton <munckfish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "byte_glob", "byte_string"]
default-members = [".", "byte_glob", "byte_string"]

[dependencies]
byte_glob = { path = "./byte_glob" }
byte_string = { path = "./byte_string" }
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "0.2.25", features = ["full"] }
futures = "0.3.25"
